test/good/sets/for07.px

for x, y in {1}, [2, 3] by -1 do
    print x, y
