test/bad/dictionaries/comprehension03.px

{for _ in [] yield 1: 2, 3}
